--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2>Language</h2>
             <ul>
                 <li>Hindi</li>
-                <li>Engli</ul>
+                <li>English</ul>
         </section>
 
         <section class="projects" id="project">
