--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <ul>
          <li><p>Email: adityamishra09648@gmail.com</p></li>
             <li><p>GitHub: github.com/adityamishra1s</p></li>
-            <li><p>Mobile No: 9005636715</p></li>
+            <li><p>Mobile No: 91 9005636715</p></li>
             </ul>
         </section>
 
