currect the code responsive

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 
                 <span id="element"></span>
                 <p>
-                    <button class="button">
-                        <a href="Resume.pdf"> Download CV</a>
-                    </button>
+                    <a class="button" href="Resume.pdf">Download Resume</a>
                 </p>
 
             </div>
